k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-list-search
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: price-list-search
